fix(trainingAndQualsSnaggingList): Add margin to phrases in training info panel to align centrally with flags

--- a/src/app/shared/components/training-info-panel/training-info-panel.component.scss
+++ b/src/app/shared/components/training-info-panel/training-info-panel.component.scss
@@ -87,6 +87,10 @@
 .asc-content {
   display: flex;
 
+  &--phrase {
+    margin-top: 1px;
+  }
+
   &--image {
     margin-right: 5px;
   }
